feat : 로또 티켓을 생성한다