@@ -5,13 +5,19 @@ import java.util.stream.IntStream;
 public class LottoStore {
 
     private static final int LOTTO_PRICE = 1_000;
+    private final LottoNumberGenerator lottoNumberGenerator;
+
+    public LottoStore(LottoNumberGenerator lottoNumberGenerator) {
+        this.lottoNumberGenerator = lottoNumberGenerator;
+    }
+
 
     public List<LottoTicket> buy(final int purchaseAmount) {
         validateAmountUnit(purchaseAmount);
         int purchaseCount = purchaseAmount / LOTTO_PRICE;
         return IntStream.range(0, purchaseCount)
-                .mapToObj(i -> new LottoTicket())
-                .collect(Collectors.toList());
+                .mapToObj(count -> new LottoTicket(lottoNumberGenerator.generate()))
+                .toList();
     }
 
     private void validateAmountUnit(int purchaseAmount) {
